V0.19-SVN
* Added 'User Manual' option in help menu, which opens a browser (by
  default Firefox, this can be changed by using the 'undocumented'
  browserCommand option in the prefs file.)
* Updated SWT to stable 3.2 build
V0.18 2006-04-09
* Renamed 'None' to 'Clear' for the .emp drop for button, added a 'Clear' 
  button to the proxy settings
* Allowed proxy settings able to be cleared (fixes bug #14)
* Having * and ? in filenames seems to cause issues with some things, 
  these are now converted to '_'
* Refactored away some tedious boilerplate code for dealing with buttons
* Made the Proxy Host text box wider than the Proxy Port text box
* Renamed the 'Network' group to 'Proxy Settings'
* Added radio buttons to the proxy settings
* Remember last proxy host and port when proxy is turned off via radio buttons
* Removed the 'Clear' button in the proxy settings
* Http checks if proxy is active instead of if the host > 0 length
* Fixed ugly MIME handling in download code, now it's a lot more generalised
V0.17 2006-02-06
* Added new set of icons, from Liron Tocker <http://lironbot.com>
* About text box now has a scrollbar (fixes bug #7), changed the look of
  it a bit to include new app logo
* System tray icon now changes when all downloads are paused (fixes bug #8)
* When eMusic/J is opened, any downloads that had failed will now be tried
  again (fixes #11)
* Requeuing a track resets its download failure count (fixes #11)
* 'Finished' has been renamed to 'Completed' (fixes #12)
* Pause/resume downloads from system tray icon (fixes #9)
V0.16 2006-01-15
* New downloads aren't added to the list if they're already on it.
* If a download fails 5 times, it won't be automatically started again
* Refactored the display of extra information (in the info panel) to be
  much more general, to allow more things to be displayed
* Album covers now show the cover when they are selected
* Genre and duration now show for tracks in the info panel