@@ -31,7 +31,7 @@ package nz.net.kallisti.emusicj.controller;
 public interface IPreferenceChangeListener {
 
 	public enum Pref { DROP_DIR, PROXY_PORT, PROXY_HOST, CHECK_FOR_UPDATES, 
-		MIN_DOWNLOADS, FILE_PATTERN, SAVE_PATH };
+		MIN_DOWNLOADS, FILE_PATTERN, SAVE_PATH, REMOVE_COMPLETED_DOWNLOADS };
 	
 	public void preferenceChanged(Pref pref);
 	
